# PalmReading

./: .gitignore  DEPLOY.md  README.md  docker-compose.yml  palm-reading-guide.html
backend/: .dockerignore  .env.exmple  .gitignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py  schemas.py  services.py  storage.py
backend/app/providers/: __init__.py  base.py  mock.py  openai_compatible.py
backend/tests/: test_api.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js  styles.css
frontend/src/api/: palmReadings.js
frontend/src/components/: PalmIllustration.vue  PalmReport.vue
frontend/src/data/: fallbackReading.js
frontend/src/views/: HomeView.vue  PublicReadingView.vue  ReadingView.vue
